conf-test: add test session

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,3 +17,6 @@ install: $(TARGETS)
 item-test: item.o
 node-test: node.o
 conf-test: conf.o node.o item.o
+
+test: conf-test
+	./conf-test < test/conf.session
