janus-groups: add basic implementation

--- a/groups/Makefile
+++ b/groups/Makefile
@@ -1,4 +1,4 @@
-TARGETS = callout.o inet.o ipv4-expand.o address.o node.o group.o
+TARGETS = janus-groups
 
 CFLAGS += -Wall -O6 -D_GNU_SOURCE
 
@@ -12,3 +12,8 @@ PREFIX ?= /usr/local
 install: $(TARGETS)
 	install -D -d $(DESTDIR)/$(PREFIX)/bin
 	install -s -m 0755 $^ $(DESTDIR)/$(PREFIX)/bin
+
+janus-groups: callout.o
+janus-groups: inet.o ipv4-expand.o address.o node.o group.o
+janus-groups: CFLAGS  += `pkg-config libipset --cflags`
+janus-groups: LDFLAGS += `pkg-config libipset --libs`
