--- a/groups/Makefile
+++ b/groups/Makefile
@@ -10,8 +10,8 @@ clean:
 PREFIX ?= /usr/local
 
 install: $(TARGETS)
-	install -D -d $(DESTDIR)/$(PREFIX)/bin
-	install -s -m 0755 $^ $(DESTDIR)/$(PREFIX)/bin
+	install -D -d $(DESTDIR)/$(PREFIX)/sbin
+	install -s -m 0755 $^ $(DESTDIR)/$(PREFIX)/sbin
 
 janus-groups: callout.o
 janus-groups: inet.o ipv4-expand.o address.o node.o group.o
