ibf-login: add IBF login CGI application

--- a/ibf/src/Makefile
+++ b/ibf/src/Makefile
@@ -1,4 +1,4 @@
-TARGETS += ibf-gate
+TARGETS += ibf-login ibf-gate
 
 all: $(TARGETS)
 
@@ -11,8 +11,14 @@ install: $(TARGETS)
 	install -D -d $(DESTDIR)/$(PREFIX)/bin
 	install -s -m 0755 $^ $(DESTDIR)/$(PREFIX)/bin
 
-cgi.o: CFLAGS  += `pkg-config --cflags glib-2.0`
+cgi.o conf.o: CFLAGS  += `pkg-config --cflags glib-2.0`
 
-ibf-gate: CFLAGS  += `pkg-config --cflags libipset glib-2.0`
-ibf-gate: LDFLAGS += `pkg-config --libs   libipset glib-2.0` -lfcgi
+login-page.o: login-head login-tail
+	$(LD) -r -b binary -o $@ $^
+
+ibf-login: LDFLAGS += -lpam
+ibf-login ibf-gate: CFLAGS  += `pkg-config --cflags libipset glib-2.0`
+ibf-login ibf-gate: LDFLAGS += `pkg-config --libs   libipset glib-2.0` -lfcgi
+
+ibf-login: conf.o cgi.o pam.o login-page.o
 ibf-gate: cgi.o
