--- a/ibf/src/Makefile
+++ b/ibf/src/Makefile
@@ -10,6 +10,8 @@ PREFIX ?= /usr/local
 install: $(TARGETS)
 	install -D -d $(DESTDIR)/$(PREFIX)/sbin
 	install -s -m 0755 $^ $(DESTDIR)/$(PREFIX)/sbin
+	install -D -d $(DESTDIR)/$(PREFIX)/share/ibf
+	install -m 0644 avatar.png $(DESTDIR)/$(PREFIX)/share/ibf
 
 cgi.o conf.o: CFLAGS  += `pkg-config --cflags glib-2.0`
 
