ibf: specify uid/gid for CGI applications and remove suid from ibf-login

--- a/ibf/src/ibf-gate.conf
+++ b/ibf/src/ibf-gate.conf
@@ -1,4 +1,6 @@
 server.port		= 1026
+server.username		= "nobody"
+server.groupname	= "www-data"
 server.pid-file		= "/var/run/ibf/ibf-gate.pid"
 server.document-root	= "/var/run/ibf/"
 
