--- a/ibf/src/ibf-login.conf
+++ b/ibf/src/ibf-login.conf
@@ -1,4 +1,6 @@
 server.port		= 1025
+server.username		= "root"
+server.groupname	= "www-data"
 server.pid-file		= "/var/run/ibf/ibf-login.pid"
 server.document-root	= "/var/run/ibf/"
 
