ibf-*.conf: fix typo

--- a/ibf/src/ibf-gate.conf
+++ b/ibf/src/ibf-gate.conf
@@ -10,7 +10,7 @@ setenv.add-environment = ( "LM" => "lm.local" )
 
 fastcgi.server =  (
 	"/" => ( "ibf-gate" => (
-		"socket"	=> "/var/unn/ibf/ibf-gate.sock",
+		"socket"	=> "/var/run/ibf/ibf-gate.sock",
 		"bin-path"	=> "/usr/sbin/ibf-gate",
 		"check-local"	=> "disable",
 		"max-procs"	=> 1
