--- a/ibf/src/ibf-login.conf
+++ b/ibf/src/ibf-login.conf
@@ -8,7 +8,7 @@ server.modules	= ( "mod_fastcgi" )
 
 fastcgi.server =  (
 	"/" => ( "ibf-login" => (
-		"socket"	=> "/var/unn/ibf/ibf-login.sock",
+		"socket"	=> "/var/run/ibf/ibf-login.sock",
 		"bin-path"	=> "/usr/sbin/ibf-login",
 		"check-local"	=> "disable",
 		"max-procs"	=> 1
