ibf-gate: remove linkage with ipset

--- a/ibf/src/Makefile
+++ b/ibf/src/Makefile
@@ -16,9 +16,11 @@ cgi.o conf.o: CFLAGS  += `pkg-config --cflags glib-2.0`
 login-page.o: login-head login-tail avatar.png
 	$(LD) -r -b binary -o $@ $^
 
-ibf-login: LDFLAGS += -lpam
-ibf-login ibf-gate: CFLAGS  += `pkg-config --cflags libipset glib-2.0`
-ibf-login ibf-gate: LDFLAGS += `pkg-config --libs   libipset glib-2.0` -lfcgi
+ibf-login: CFLAGS  += `pkg-config --cflags libipset glib-2.0`
+ibf-login: LDFLAGS += `pkg-config --libs   libipset glib-2.0` -lfcgi -lpam
+
+ibf-gate: CFLAGS  += `pkg-config --cflags glib-2.0`
+ibf-gate: LDFLAGS += `pkg-config --libs   glib-2.0` -lfcgi
 
 ibf-login: conf.o cgi.o pam.o login-page.o
 ibf-gate: cgi.o
