--- a/ibf/src/Makefile
+++ b/ibf/src/Makefile
@@ -22,6 +22,8 @@ ibf-login: LDFLAGS += `pkg-config --libs   libipset glib-2.0` -lfcgi -lpam
 ibf-gate: CFLAGS  += `pkg-config --cflags glib-2.0`
 ibf-gate: LDFLAGS += `pkg-config --libs   glib-2.0` -lfcgi
 
+ibf-init: LDFLAGS += `pkg-config --libs   glib-2.0`
+
 ibf-login: conf.o cgi.o pam.o login-page.o
 ibf-gate: cgi.o
-ibf-init: service.o
+ibf-init: conf.o service.o
