ibf-login: mangle group name

--- a/ibf/src/Makefile
+++ b/ibf/src/Makefile
@@ -16,8 +16,11 @@ cgi.o conf.o: CFLAGS  += `pkg-config --cflags glib-2.0`
 login-page.o: login-head login-tail avatar.png
 	$(LD) -r -b binary -o $@ $^
 
+chain-hash.o: CFLAGS += `pkg-config openssl --cflags`
+
 ibf-login: CFLAGS  += `pkg-config --cflags libipset glib-2.0`
-ibf-login: LDFLAGS += `pkg-config --libs   libipset glib-2.0` -lfcgi -lpam
+ibf-login: LDFLAGS += `pkg-config --libs   libipset glib-2.0 openssl` -lfcgi -lpam
+ibf-login: chain-hash.o
 
 ibf-gate: CFLAGS  += `pkg-config --cflags glib-2.0`
 ibf-gate: LDFLAGS += `pkg-config --libs   glib-2.0` -lfcgi
